<?xml version="1.0" encoding="utf-8"?>
<!-- changelanguage_page.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".changelanguage_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#ffffff"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.1"
            android:onClick="previous"
            android:src="@drawable/general_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/language_top"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textViewSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/primary_text_color"
            android:layout_marginBottom="24dp"/>

        <RadioGroup
            android:id="@+id/radioGroupLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:padding="8dp"
            android:background="@drawable/radiogroup_background">

            <RadioButton
                android:id="@+id/radioButtonEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_lang"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/primary_text_color"/>

            <RadioButton
                android:id="@+id/radioButtonMalay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malay_lang"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/primary_text_color"/>

        </RadioGroup>

        <Button
            android:id="@+id/buttonSaveLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_savebtn"
            android:textSize="18dp"
            android:textColor="@color/button_text_color"
            android:fontFamily="@font/montserrat_semibold"
            android:textAllCaps="false"
            android:backgroundTint="@color/darkblue"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </LinearLayout>

</LinearLayout>
