<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".article1_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#ffffff"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.1"
            android:onClick="previous"
            android:src="@drawable/general_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/article"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="295dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/article1_single1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/whitebackground"
                android:layout_marginTop="-60dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/singlearticle1"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:lineHeight="40dp"
                    android:fontFamily="@font/montserrat"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="10dp"
                    android:text="08/08/2024"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/darkblue"
                    android:fontFamily="@font/josefinlight"
                    app:layout_constraintTop_toBottomOf="@id/text1"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:id="@+id/watchImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/general_clock"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="140dp"
                    app:layout_constraintStart_toEndOf="@id/text2"
                    app:layout_constraintTop_toBottomOf="@id/text1"
                    app:layout_constraintEnd_toStartOf="@id/text3"/>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:paddingBottom="10dp"
                    android:layout_marginRight="18dp"
                    android:text="@string/timearticle1"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/darkblue"
                    android:fontFamily="@font/josefinlight"
                    app:layout_constraintTop_toBottomOf="@id/text1"
                    app:layout_constraintStart_toEndOf="@id/watchImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/by"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/darkblue"
                    android:fontFamily="@font/josefinlight"
                    app:layout_constraintTop_toBottomOf="@id/text2"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/descarticle1"
                    android:justificationMode="inter_word"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:lineHeight="27dp"
                    android:fontFamily="@font/montserrat_semibold"
                    app:layout_constraintTop_toBottomOf="@id/text4"/>

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/descarticle1_2"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:lineHeight="27dp"
                    android:fontFamily="@font/montserrat_semibold"
                    app:layout_constraintTop_toBottomOf="@id/text5"/>

                <TextView
                    android:id="@+id/text7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/descarticle1_3"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:lineHeight="27dp"
                    android:fontFamily="@font/montserrat_semibold"
                    app:layout_constraintTop_toBottomOf="@id/text6"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>