<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="230dp"
        android:layout_height="260dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fruitsenselogo" />

    <EditText
        android:id="@+id/email"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_marginTop="308dp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbtn"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/log_in"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpass" />

    <TextView
        android:id="@+id/donthaveacc"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:fontFamily="@font/lato_regular"
        android:text="@string/signupInLoginPage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

    <TextView
        android:id="@+id/donthaveacc1"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:fontFamily="@font/lato_regular"
        android:text="@string/signupInLoginPage1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donthaveacc" />


    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="220dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>